--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,9 @@ section {
   background-color: #fff;
   transition: ease 0.5s;
   z-index: 5000;
+  position: absolute;
+  left: 500px;
+  top: 500px;
 }
 input {
   padding: 10px;
@@ -103,10 +106,11 @@ body {
   background-color: transparent;
   border-color: gray;
 }
-.carousel img {
-  height: 810px;
-  padding: 60px;
-  width: 800px !important;
+/*
+.carousel-inner 3 img {
+  height: 910px;
+  padding: 80px;
+  width: 850px !important;
 }
 .carousel p {
   font-family: arial;
@@ -114,3 +118,76 @@ body {
   color: black;
   background-color: white;
 }
+.carousel-inner 1 img {
+  height: 910px;
+  padding: 80px;
+  width: 850px !important;
+}
+.carousel-inner 2 img {
+  height: 910px;
+  padding: 80px;
+  width: 850px !important;
+}
+*/
+#carouselExampleIndicators {
+  height: 500px;
+}
+#carouselExampleIndicators img {
+  width: 500px;
+  height: 900px;
+}
+/* ----------------------------------------------inicio do livros----------------------------------------------------- */
+
+h3 {
+  font-family: "arial";
+  font-size: 30pt;
+  margin: 30px;
+}
+
+#linha {
+  padding: 30px;
+  margin: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap; /*quebra de linha*/
+  box-shadow: 2px 2px 10px black;
+  justify-content: center;
+}
+
+#linha div {
+  width: 30%;
+  margin: 10px;
+  border: 1px solid silver;
+}
+
+#linha div img {
+  width: 100%;
+}
+
+#linha div h4 {
+  font-family: arial;
+  font-size: 20px;
+  margin: 10px;
+  color: black;
+}
+
+#linha div p {
+  font-family: arial;
+  font-size: 15pt;
+  color: black;
+  margin: 10px;
+  font-weight: 10px;
+}
+div {
+  background-color: white;
+  cursor: pointer;
+}
+/* ------------------------------------------------fim do livros---------------------------------------------------------------- */
+/*-------------------------------------------------=inicio do localização--------------------------------------------------*/
+
+#mapa iframe {
+  width: 100%;
+  height: 500px;
+}
+
+/*---------------------------------------------------fim do localização---------------------------------------------------------*/
