--- a/css/styles.css
+++ b/css/styles.css
@@ -133,9 +133,19 @@ body {
   height: 500px;
 }
 #carouselExampleIndicators img {
-  width: 500px;
-  height: 900px;
+  width: 800px;
+  height: 800px;
 }
+#fotos {
+  width: 1700px;
+  height: 1700px;
+  background-color: transparent;
+}
+#jogos {
+  width: 500px;
+  height: 500px;
+}
+
 /* ----------------------------------------------inicio do livros----------------------------------------------------- */
 
 h3 {
@@ -187,7 +197,22 @@ div {
 
 #mapa iframe {
   width: 100%;
-  height: 500px;
+  height: 700px;
 }
 
 /*---------------------------------------------------fim do localização---------------------------------------------------------*/
+
+/*---------------------------------------------------inicio do lorem---------------------------------------------------------*/
+#lorem {
+  background-color: whitesmoke;
+  font-family: arial;
+  font-size: 30px;
+  color: indigo;
+}
+/*---------------------------------------------------fim do lorem---------------------------------------------------------*/
+/*-------------------------------------------------=inicio do localização--------------------------------------------------*/
+#escola iframe {
+  width: 100%;
+  height: 800px;
+}
+/*-------------------------------------------------=fim da localização--------------------------------------------------*/
